# router/section.go
@@ -3,12 +3,12 @@ package router
 import (
 	"github.com/gin-gonic/gin"
 	"my/api"
-	"my/middleware"
 )
 
 func InitSectionRouter(Router *gin.RouterGroup) {
-	ApiRouter := Router.Group("section").Use(middleware.JWTAuth())
+	ApiRouter := Router.Group("section")
+	//.Use(middleware.JWTAuth())
 	{
-		ApiRouter.GET("/section/list", api.Sections)
+		ApiRouter.GET("/list", api.Sections)
 	}
 }
